# lzo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
docs/: index.md  privacy.md  terms.md  validation.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decompress.rs
src/: lib.rs
supply-chain/: config.toml
tests/: errors.rs  roundtrip.rs
tests/data/: farmatch.lzo  farmatch.raw  hello.lzo  hello.raw  incompressible.lzo  incompressible.raw  libsrc.lzo  libsrc.raw  pattern.lzo  pattern.raw  readme.lzo  readme.raw  run_a.lzo
validation/: lzo_compress.c
validation/lzodiff/: Cargo.toml  README.md
validation/lzodiff/src/: main.rs
