[package]
name = "lzo"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Safe, dependency-free, pure-Rust LZO1X decompressor — the GPL-free, MIT-licensed alternative for reading lzo1x_1 / lzo1x_999 streams."
license = "MIT"
readme = "README.md"
repository = "https://github.com/SecurityRonin/lzo"
homepage = "https://github.com/SecurityRonin/lzo"
documentation = "https://docs.rs/lzo"
authors = ["Albert Hui"]
keywords = ["lzo", "lzo1x", "decompression", "no-std", "forensics"]
categories = ["compression", "no-std"]

[features]
default = ["alloc"]
# Enables the allocating `decompress` convenience (the core `decompress_into`
# needs no allocator and works in pure `no_std`).
alloc = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
