[package]
name = "lzo"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
description = "Safe, dependency-free, no_std pure-Rust LZO1X decompressor — bounds-checked and fuzz-hardened for reading untrusted lzo1x_1 / lzo1x_999 streams."
license = "MIT"
readme = "README.md"
repository = "https://github.com/SecurityRonin/lzo"
homepage = "https://github.com/SecurityRonin/lzo"
documentation = "https://docs.rs/lzo"
authors = ["Albert Hui"]
keywords = ["lzo", "lzo1x", "decompression", "no-std", "forensics"]
categories = ["compression", "no-std"]
# The differential oracle pulls a GPL-2.0 dev dependency; keep it out of the
# published, MIT-licensed tarball entirely.
exclude = ["validation/lzodiff"]

[features]
default = ["alloc"]
# Enables the allocating `decompress` convenience (the core `decompress_into`
# needs no allocator and works in pure `no_std`).
alloc = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# The `x & MASK == 0` form mirrors the LZO1X spec's instruction decoding and is
# clearer here than `trailing_zeros()`.
verbose_bit_mask = "allow"
# Error variants are self-describing via `Error`'s docs/Display.
missing_errors_doc = "allow"
